# rekolektion

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.cercano/: context.md
audit/: flood_fill_2026-05-03.md  hack_inventory.md  phase_2_plan.md  signoff_gate.md  smoking_guns.md  task_117_spice_stub_plan.md  tier1_pipeline.md  tier2_connectivity.md  tier3_characterisation.md  tier4_intent.md  tier5_history.md
conductor/: product.md  projects.md  tech-stack.md  workflow.md
docs/: cim_integration.md  lvs_flow.md  power_gating_integration.md  spice_characterization_report.md  verification_report.md
openlane_test/: config.json  synth_test.ys
openlane_test_v1activation/: config.json  macro_placement.cfg
openlane_test_v1weight/: config.json
scripts/: audit_drc_spatial.py  audit_drc_waivers.py  build_lshift_1v8_to_3v3.py  build_nand2_inv_lv.py  characterize_cim_liberty.py  debug_waiver_tiles.py  demo_primitive_workflow.py  diff_primitives.py  extract_cim_subckts.py  extract_foundry_subckts.py  gds_to_stl.py  generate_all.sh  generate_cim_production.py  generate_v1_macros.py  generate_v1_production.py  generate_v2_production.py  macro_sizing_study.py  measure_density.py  openlane_env.sh  openroad_smoke_cim.py  phase0_supercell_drc.py  probe_peripheral_shorts.py  regen_primitives.py  render_cell.py  run_drc.sh  run_drc.tcl  run_drc_cim.py  run_lvs_bitcell.py  run_lvs_cim.py  run_lvs_production.py  run_lvs_tiny.py  sim_supercell_functional.py  test_din_routing_mux.py  validate_2x2_abutment.py  verify_array_drc.sh  verify_macro.py  verify_macros.sh
(+650 files in other folders)
