[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rekolektion"
version = "0.1.0"
description = "Open-source SRAM generator for SkyWater SKY130 130nm process"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Bryan Costanich" },
]

dependencies = [
    "gdstk>=0.9.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
rekolektion = "rekolektion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "magic: tests that invoke Magic (require PDK_ROOT env, slow ~10s each)",
    "openlane: tests that run a full OpenLane chip flow (require nix-store yosys/openroad/klayout/netgen on PATH via scripts/openlane_env.sh)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
